devoir_programmation_java/media/solutions/erreur.txt
main.java:3: error: ';' expected
System.out.println("dddddd")
                            ^
1 error
